# keeper

./: .env.1p  .gitignore  README.md  biome.json  index.html  lefthook.yml  package.json  rust-toolchain.toml  vite.config.ts  vitest.config.ts
.bmad-loop/: decisions.json  policy.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
_bmad/: config.toml  config.user.toml  config.user.yaml  config.yaml
_bmad-output/implementation-artifacts/: bmad-dev-auto-result-12-6-on-device-walking-skeleton-validation-sm-7-gate.md  bmad-dev-auto-result-14-7-backup-exclusion-and-file-protection.md  bmad-dev-auto-result-15-4-required-ios-ci-gate-and-release-hygiene.md  bmad-dev-auto-result-15-5-paid-program-decision-gate-recorded.md  bmad-dev-auto-result-16-6-full-screen-system-audio-capture-to-a-single-fmp4.md  bmad-dev-auto-result-20-3-completion-reveal-in-finder-and-startup-recovery-notice.md  bmad-dev-auto-result-20-5-reliability-envelope-4-h-soak-and-cpu-memory-verification.md  bmad-dev-auto-result-20-6-sm-9-sm-10-phase-acceptance-docs-recording-md-and-retrospective-inputs.md  deferred-work.md  epic-1-context.md  epic-10-context.md  epic-11-context.md  epic-12-context.md  epic-13-context.md  epic-14-context.md  epic-15-context.md  epic-16-context.md  epic-17-context.md  epic-18-context.md  epic-19-context.md  epic-2-context.md  epic-20-context.md  epic-21-context.md  epic-3-context.md  epic-4-context.md  epic-5-context.md  epic-6-context.md  epic-7-context.md  epic-8-context.md  epic-9-context.md  spec-1-1-cargo-workspace-split-and-typed-ipc-foundation.md  spec-1-2-app-shell-three-pane-frame-and-keeper-theme.md  spec-1-3-password-login-with-sliding-sync-verification.md  spec-1-4-sliding-sync-room-list.md  spec-1-5-timeline-view-receive-text.md  spec-1-6-send-text-with-local-echo-and-visible-send-states.md  spec-1-7-offline-resilience-queued-sends-and-reconnect-convergence.md  spec-1-8-session-restore-and-sign-out.md  spec-10-1-native-notifications-from-the-sync-loop.md  spec-10-2-mutes-mention-only-and-do-not-disturb.md  (+105 more)
_bmad-output/planning-artifacts/: epics.md  product-inputs.md  research-ios-2026-07-09.md  research-market-2026-07-03.md  research-recording-2026-07-16.md  research-technical-2026-07-03.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
deploy/companion-stack/: .env.example  README.md  docker-compose.yml
docs/: constraints-and-limitations.md  credentials.md  decisions.md  egress.md  ios.md  performance.md  project-context.md  recording.md  release.md
scripts/: build-keeper-rec.sh  check-js-licenses.test.ts  check-js-licenses.ts  gen-ios-icons.swift  smoke-keeper-rec.sh  test-keeper-rec.sh  verify-ios-ipa.test.ts  verify-ios-ipa.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  deny.toml  tauri.conf.json
src-tauri/crates/keeper/: Cargo.toml  Info.plist  keeper-rec.entitlements  tauri.conf.json
src-tauri/crates/keeper-core/: Cargo.toml
src-tauri/crates/keeper-core/data/: bbctl.json  bot-commands.json  coupling-caveats.json  health-signals.json  known-bots.json  provisioning.json  resolve-support.json  risk-tiers.json
src-tauri/crates/keeper-core/src/: account.rs  auth.rs  backup.rs  badge.rs  bridge.rs  demo.rs  drafts.rs  egress.rs  error.rs  inbox.rs  lib.rs  media.rs  notify.rs  oauth.rs  palette.rs  platform.rs  recording.rs  registry.rs  send.rs  signals.rs  timeline.rs  verification.rs  vm.rs
src-tauri/crates/keeper-core/src/archive/: db.rs  fts.rs  ingest.rs  mod.rs
src-tauri/crates/keeper-core/src/archive/export/: json.rs  md.rs  mod.rs
src-tauri/crates/keeper-core/src/auth/: beeper.rs
src-tauri/crates/keeper-core/src/bridges/: bbctl.rs  data.rs  discovery.rs  health.rs  login.rs  mod.rs
src-tauri/crates/keeper-core/src/bridges/transport/: bot.rs  mod.rs  provisioning.rs
src-tauri/crates/keeper-core/tests/: archive_durability.rs  archive_ingestion.rs  archive_search.rs  archive_search_perf.rs  archive_survives_sign_out.rs  cold_start_perf.rs  crash_safety.rs  event_cache_pagination.rs
src-tauri/crates/keeper/capabilities/: default.json  desktop.json
src-tauri/crates/keeper/src/: debug_log.rs  hotkey.rs  ipc.rs  lib.rs  lifecycle.rs  macos_version.rs  main.rs  media_protocol.rs  menu.rs  recorder.rs  tray.rs  zero_egress.rs
src-tauri/crates/keeper/tests/: entitlements_protection.rs
src/hooks/: use-account-statuses.test.ts  use-account-statuses.ts  use-active-chat-reporter.test.ts  use-active-chat-reporter.ts  use-app-lifecycle.test.ts  use-app-lifecycle.ts  use-approval-shortcut.test.ts  use-approval-shortcut.ts  use-bbctl-run.ts  use-bridge-catalog.ts  use-bridge-discovery.ts  use-bridge-health.ts  use-bridge-login.ts  use-bridges-shortcut.ts  use-capabilities-hydrate.ts  use-cheat-sheet-shortcut.test.ts  use-cheat-sheet-shortcut.ts  use-command-palette-shortcut.ts  use-connection-status.test.ts  use-connection-status.ts  use-coupling-caveats.test.ts  use-coupling-caveats.ts  use-encryption-statuses.test.ts  use-encryption-statuses.ts  use-global-hotkey.test.ts  use-global-hotkey.ts  use-key-backup-statuses.test.ts  use-key-backup-statuses.ts  use-keyboard-inset.test.ts  use-keyboard-inset.ts  use-long-press.test.tsx  use-long-press.ts  use-menu-actions.test.ts  use-menu-actions.ts  use-nav-state-persistence.test.ts  use-nav-state-persistence.ts  use-new-chat-shortcut.ts  use-notify-navigate.test.ts  use-notify-navigate.ts  use-quick-switcher.test.ts  (+35 more)
src/lib/: account-hue.ts  account-initials.ts  beeper.test.ts  beeper.ts  bridges.test.ts  bridges.ts  format-time.test.ts  format-time.ts  hotkey.test.ts  hotkey.ts  recording-control.test.ts  recording-control.ts  recording-format.test.ts  recording-format.ts  rendered-window.ts  search-filter.test.ts  search-filter.ts  webview-reload.ts
src/test/: no-user-agent-gating.test.ts  setup.ts
(+261 files in other folders)
