[workspace]
resolver = "2"
members = ["crates/keeper-core", "crates/keeper"]

[workspace.package]
version = "0.3.0"
authors = ["Tomasz Gorka"]
license = "Apache-2.0"
repository = "https://github.com/tgorka/keeper"
edition = "2021"

# Shared lints — single source of truth; each crate opts in with `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"

[workspace.dependencies]
# Tauri shell. The `tray-icon` feature backs the opt-in menu-bar presence (Story 10.3,
# FR-53); the dock-badge port uses the in-core `set_badge_count` API (no extra feature).
# The feature is desktop-only and is added by the `keeper` crate through a
# target-gated dependency entry (Story 12.2) — Cargo target tables only understand
# real target cfgs, so the base workspace dep stays featureless-of-tray here.
tauri = { version = "2" }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
# OS-level global summon/hide hotkey (Story 9.4, FR-50). Desktop-only platform port;
# registration/unregistration happen only in Rust. MIT/Apache — passes `cargo deny check`.
tauri-plugin-global-shortcut = "2"
# Native OS notifications from the sync loop (Story 10.1, FR-51). The desktop
# `Platform::notify` port posts through this; content originates only from the local
# decrypting loop, never a push gateway. MIT/Apache — passes `cargo deny check`.
tauri-plugin-notification = "2"
# Opt-in launch-at-login via a macOS LaunchAgent (Story 10.3, FR-53, AD-25). The plugin
# owns the enabled state authoritatively; off by default. Apache/MIT — passes `cargo deny`.
tauri-plugin-autostart = "2"
# Signed auto-updates (Story 11.2, NFR-12). The updater checks the GitHub-releases
# `latest.json` endpoint and verifies each artifact against the committed minisign public
# key before installing; `tauri-plugin-process` supplies `relaunch()` after an update.
# Both are MIT/Apache — pass `cargo deny check`.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Serialization + IPC bindings
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "12"
# Async runtime + observability
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
# Matrix core (homed in keeper-core; unused in 1.1 but owned here per AD-6)
matrix-sdk = { version = "0.18", features = ["e2e-encryption", "qrcode", "sqlite", "sso-login"] }
matrix-sdk-ui = "0.18"
# QR-code rendering for device-verification *display* (Story 3.2). The matrix-sdk
# `qrcode` feature (above) pulls this same crate for `QrVerification::to_qr_code`;
# depended on directly for the `svg` renderer. `default-features = false` drops
# the `image`/`pic` renderers so no image codecs are linked. MIT/Apache — passes
# `cargo deny check`.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Async stream adapters for the room-list producer (already in the tree via matrix-sdk).
futures-util = "0.3"
# URL parsing for the OIDC callback registry + redirect metadata (already in the tree via matrix-sdk).
url = "2"
# Percent-decoding `keeper-media://` URL path segments (Story 3.6). Already in the
# tree via url/matrix-sdk — a direct dep adds no new crate; permissive (MIT/Apache).
percent-encoding = "2"
# MIME type parsing/matching (Story 3.7, media send). Already in the tree via
# matrix-sdk; a direct dep adds no new crate. MIT/Apache — passes `cargo deny check`.
mime = "0.3"
# Guessing a MIME type from a file path/extension for the media send path (Story
# 3.7). Returns a `mime::Mime`; `application/octet-stream` fallback. MIT — passes
# `cargo deny check`.
mime_guess = "2"
# HTTP client for the Beeper unofficial email-code login flow (Story 2.3, AD-17).
# rustls-only to match matrix-sdk's TLS backend — no second TLS stack (no native-tls/OpenSSL).
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
# Platform ports
dirs = "6"
# Destination free-space probe for the recording validate-on-Start pre-flight
# (Story 19.5). Shell-only — keeper-core holds the pure `evaluate_destination`
# decision and no filesystem-probe dependency (AD-33). The default `sync`
# feature is exactly the blocking `fs4::available_space` statvfs probe; no
# async runtime integration is pulled in. Apache-2.0/MIT — passes `cargo deny check`.
fs4 = { version = "0.13", default-features = false, features = ["sync"] }
# Local-time-stamped recording filenames (Story 16.6, FR-71) — clock-only, no
# default features (no oldtime/wasm baggage). MIT/Apache — passes `cargo deny check`.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Keychain (macOS Keychain via the OS-native backend) — shell-only, the only genuinely new crate.
keyring = { version = "3", features = ["apple-native"] }
# iOS keychain fallback (Story 12.3, AD-29). Catalog entry only — 3.7.0 is already
# resolved in the lock via keyring, so no new crate version is pulled; the only Cargo.lock
# change is the dependency edge recorded on the `keeper` crate, and the desktop dep tree /
# build stay byte-identical. Consumed by the `keeper` crate under an iOS-only target table
# to pin `AfterFirstUnlockThisDeviceOnly`. MIT/Apache — passes the cargo-deny license firewall.
security-framework = "3"
# iOS backup exclusion (Story 14.7, FR-65, AD-29). Catalog entries only — objc2 0.6 /
# objc2-foundation 0.3 are already resolved in the lock transitively (tao/wry/muda), so no
# new crate version is pulled; the only Cargo.lock change is the dependency edge on the
# `keeper` crate. Consumed under an iOS-only target table for the single audited
# `NSURLIsExcludedFromBackupKey` FFI behind `Platform::exclude_from_backup`. The feature
# list names exactly the Foundation surfaces that call touches (NSURL + its NSError result,
# NSString path, NSNumber value). MIT — passes the cargo-deny license firewall.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL", "NSError", "NSString", "NSValue"] }
# iOS app-icon badge (Story 14.3 fix, FR-62): safe `UNUserNotificationCenter::setBadgeCount`
# binding (block2 feature for the optional completion handler). Already resolved in the lock
# transitively; MIT — passes the cargo-deny license firewall.
objc2-user-notifications = { version = "0.3", features = ["UNUserNotificationCenter", "block2"] }
# Account registry + opaque account ids (both already present transitively via matrix-sdk).
ulid = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
