[package]
name = "keeper-core"
description = "Keeper hexagon core — Matrix state, IPC view models, and platform ports (tauri-free)"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
# Homed here as the architectural owner (AD-6); not yet exercised in Story 1.1.
matrix-sdk = { workspace = true }
matrix-sdk-ui = { workspace = true }
# Async stream adapters for the room-list producer task.
futures-util = { workspace = true }
# URL parsing for the OIDC callback registry and OAuth redirect metadata.
url = { workspace = true }
# HTTP client for the Beeper unofficial email-code login flow (Story 2.3, AD-17).
reqwest = { workspace = true }
# Account registry (keeper.db, WAL) and opaque ULID account ids.
rusqlite = { workspace = true }
ulid = { workspace = true }
