[package]
name = "keeper-core"
description = "Keeper hexagon core — Matrix state, IPC view models, and platform ports (tauri-free)"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
# Homed here as the architectural owner (AD-6); not yet exercised in Story 1.1.
matrix-sdk = { workspace = true }
matrix-sdk-ui = { workspace = true }
# QR-code SVG rendering for device-verification display (Story 3.2). Renders the
# `qrcode::QrCode` from `QrVerification::to_qr_code()` to an SVG string in Rust —
# the webview never decodes QR crypto.
qrcode = { workspace = true }
# Async stream adapters for the room-list producer task.
futures-util = { workspace = true }
# URL parsing for the OIDC callback registry and OAuth redirect metadata.
url = { workspace = true }
# Percent-decoding `keeper-media://` URL path segments (Story 3.6, AD-4).
percent-encoding = { workspace = true }
# MIME parsing (media send caption/type) + path→mime guessing (Story 3.7, FR-13).
mime = { workspace = true }
mime_guess = { workspace = true }
# HTTP client for the Beeper unofficial email-code login flow (Story 2.3, AD-17).
reqwest = { workspace = true }
# Account registry (keeper.db, WAL) and opaque ULID account ids.
rusqlite = { workspace = true }
ulid = { workspace = true }
# Random per-account SDK-store passphrase generation (Story 2.6, at-rest encryption).
# matrix-sdk 0.18 already resolves rand 0.8 transitively; permissive (MIT/Apache).
rand = "0.8"
