[package]
name = "keeper"
description = "Keeper — an open-source, Beeper-style Matrix messenger client (Tauri shell)"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
keeper-core = { path = "../keeper-core" }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
# macOS Keychain access for the keychain_* Platform ports (shell-only glue).
keyring = { workspace = true }
# Native file-picker dialog for the composer attach button (Story 3.7). Yields OS
# file paths (never bytes over IPC). MIT/Apache — passes `cargo deny check`.
tauri-plugin-dialog = { workspace = true }
# OS-level global summon/hide hotkey (Story 9.4, FR-50). Registration/toggle live in
# `hotkey.rs`; the accelerator string persists via `keeper-core::registry`.
tauri-plugin-global-shortcut = { workspace = true }
# Native OS notifications from the sync loop (Story 10.1, FR-51). Wires the desktop
# `Platform::notify` port to the OS notifier; the plugin is registered in `lib.rs`.
tauri-plugin-notification = { workspace = true }
# Opt-in launch-at-login (Story 10.3, FR-53, AD-25). Registered in `lib.rs`; toggled
# through the `launch_at_login_set` command via `ManagerExt::autolaunch()`.
tauri-plugin-autostart = { workspace = true }
# Signed auto-updates (Story 11.2, NFR-12). Registered in `lib.rs`; the in-app
# "check for updates" flow drives it from the frontend via `@tauri-apps/plugin-updater`.
# `tauri-plugin-process` supplies `relaunch()` after applying an update.
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
# Percent-decoding raw-body IPC headers (filename/caption) for the pasted-image
# send path (Story 3.7). Already in the tree via url/matrix-sdk.
percent-encoding = { workspace = true }
