[package]
name = "keeper"
description = "Keeper — an open-source, Beeper-style Matrix messenger client (Tauri shell)"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
keeper-core = { path = "../keeper-core" }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Generates the `LifecyclePhase` frontend binding (Epic 14-1) into
# `src/lib/ipc/gen/` via the `#[ts(export)]` export test, matching keeper-core's
# VM export step. Bindings dir is set by the workspace `TS_RS_EXPORT_DIR` env.
ts-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
# macOS Keychain access for the keychain_* Platform ports (shell-only glue).
keyring = { workspace = true }
# Native file-picker dialog for the composer attach button (Story 3.7). Yields OS
# file paths (never bytes over IPC). MIT/Apache — passes `cargo deny check`.
tauri-plugin-dialog = { workspace = true }
# Native OS notifications from the sync loop (Story 10.1, FR-51). Wires the
# `Platform::notify` port to the OS notifier; the plugin is registered in `lib.rs`.
tauri-plugin-notification = { workspace = true }
# Percent-decoding raw-body IPC headers (filename/caption) for the pasted-image
# send path (Story 3.7). Already in the tree via url/matrix-sdk.
percent-encoding = { workspace = true }

# Desktop-only surfaces (Story 12.2, compile seam): these crates are
# `#![cfg(not(target_os = "ios"))]`-style desktop plugins, so iOS must never link
# them. Cargo target tables only understand real target cfgs (never tauri-build's
# injected `desktop`/`mobile`), hence the explicit target_os list.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
# The desktop-only `tray-icon` tauri feature backing the opt-in menu-bar presence
# (Story 10.3, FR-53). Merges into the base `tauri` dep on desktop targets only.
tauri = { workspace = true, features = ["tray-icon"] }
# OS-level global summon/hide hotkey (Story 9.4, FR-50). Registration/toggle live in
# `hotkey.rs`; the accelerator string persists via `keeper-core::registry`.
tauri-plugin-global-shortcut = { workspace = true }
# Opt-in launch-at-login (Story 10.3, FR-53, AD-25). Registered in `lib.rs`; toggled
# through the `launch_at_login_set` command via `ManagerExt::autolaunch()`.
tauri-plugin-autostart = { workspace = true }
# Signed auto-updates (Story 11.2, NFR-12). Registered in `lib.rs`; the in-app
# "check for updates" flow drives it from the frontend via `@tauri-apps/plugin-updater`.
# `tauri-plugin-process` supplies `relaunch()` after applying an update.
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }

# iOS-only keychain fallback (Story 12.3, AD-29). Spike verdict: keyring's `apple-native`
# iOS backend calls `set_generic_password` with no options and exposes no accessibility
# API, so it cannot pin `kSecAttrAccessibleAfterFirstUnlockThisDeviceOnly`. iOS therefore
# switches to a contained `security-framework` fallback behind the same `Platform` port
# (call sites unchanged); desktop keeps `keyring`. 3.7.0 is already resolved via keyring, so
# no new crate version is pulled — the only Cargo.lock change is this dependency edge, and
# the desktop tree / build stay byte-identical.
[target.'cfg(target_os = "ios")'.dependencies]
security-framework = { workspace = true }
# iOS backup exclusion (Story 14.7, FR-65). The single audited `#[allow(unsafe_code)]`
# FFI in `IosPlatform::exclude_from_backup` sets `NSURLIsExcludedFromBackupKey` via
# objc2-foundation (features NSURL/NSError/NSString/NSValue, set on the workspace
# catalog entry). Both crates are already in the tree transitively (tao/wry), so no
# new crate version is pulled — only the dependency edge changes.
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
# iOS app-icon badge (Story 14.3 fix, FR-62). `UNUserNotificationCenter::setBadgeCount`
# replaces the desktop-only `WebviewWindow::set_badge_count` call that broke the
# aarch64-apple-ios compile (found by Story 15.4). The objc2 0.3 binding is a SAFE API —
# no unsafe block needed. Crate already in the tree transitively; only the edge changes.
objc2-user-notifications = { workspace = true }
